--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,14 @@
-name: CI
+name: Slack Notification CI
 
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  Slack Notification:
+     name: Slack Notification
+     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - uses: actions/checkout@master
+    - name: Slack Notification
+    - uses: thliang01/action-slack-notify@master
+    env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
