--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,10 @@ jobs:
     - name: Slack Notify
       uses: rtCamp/action-slack-notify@v1.0.0
       env:
+        SLACK_CHANNEL: general
+        SLACK_COLOR: '#3278BD'
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: 'Post Content :rocket:'
+        SLACK_TITLE: Post Title
+        SLACK_USERNAME: thliang01
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
